// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render with profile image 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded transition-all duration-100 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="Foo Bar"
        class="object-cover w-20 h-20 bg-center bg-no-repeat bg-cover rounded"
        data-testid="ProfileAvatar__image"
        src="avatarImage"
        title="Foo Bar"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with svg 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded transition-all duration-100 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="Foo Bar"
        data-testid="ProfileAvatar__svg"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
        title="Foo Bar"
      />
      <span
        class="absolute font-semibold text-white"
      >
        FO
      </span>
    </div>
  </div>
</DocumentFragment>
`;
